--- a/student/css/theme.css
+++ b/student/css/theme.css
@@ -3,6 +3,10 @@ body{
     background-color:  #31669b;
     font-family: Franklin Gothic Book;
 }
+p{
+    color: white;
+    max-width: min-content;
+}
 button {
     background-color: black;
     color: white;
@@ -27,10 +31,10 @@ table{
     border:1px solid white;
 }
 .list-table tr:nth-child(even){
-     background-color: #31669b;
-     color: black;
-     border:1px solid black;
- }
+    background-color: #31669b;
+    color: black;
+    border:1px solid black;
+}
 .list-table tr:nth-child(even):hover{
     background-color: white;
     color: black;
@@ -62,4 +66,12 @@ h1{
     font-size: 25px;
     background-color:black;
     border:1px solid white;
+}
+#mainPicture{
+    height:75px;
+}
+#manufacturerSelect{
+    height: 75px;
+    border:1px solid white;
+    padding: 25px 50px;
 }
